--- a/bola-de-cristal.html
+++ b/bola-de-cristal.html
@@ -4,18 +4,82 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Bola de Cristal</title>
+    <style>
+        
+        * {
+            margin: 0;
+            padding: 0;
+            box-sizing: border-box;
+        }
+
+        body {
+            background-color: black;
+            color: white;
+            text-align: center;
+            font-family: sans-serif;
+        }
+
+        #container {
+            margin-top: 100px;
+            width: 80%;
+            max-width: 400px;
+            margin-inline: auto;
+        }
+
+        h1 {
+            margin-top: 40px;
+            margin-bottom: 10px;
+            opacity: 0.9;
+        }
+
+        p {
+            margin-bottom: 40px;
+            opacity: 0.7;
+        }
+
+        input, button {
+            display: block;
+            width: 100%;
+
+            padding: 20px;
+            font-size: 20px;
+            border-radius: 4px;
+        }
+
+        input {
+            margin-bottom: 20px;
+        }
+
+        button {
+            border: none;
+            background-color: blueviolet;
+            color: white;
+
+            transition: filter 0.2s;
+        }
+
+        button:hover {
+            filter: brightness(1.1);
+            cursor: pointer;
+        }
+
+    </style>
 </head>
 <body>
 
-    <img src="https://gist.githubusercontent.com/maykbrito/0acdf4ce919838ffed50915a31fc5b23/raw/6f4dd01ec3116428ec4c99255944cb9ac7927590/cristal-ball.svg" alt="Imagem de uma bola de cristal">
+    <div id="container">
 
-    <h1>Vou revelar o seu destino</h1>
+        <img src="https://gist.githubusercontent.com/maykbrito/0acdf4ce919838ffed50915a31fc5b23/raw/6f4dd01ec3116428ec4c99255944cb9ac7927590/cristal-ball.svg" alt="Imagem de uma bola de cristal">
 
-    <p>Clique em fazer pergunta para que o seu destino seja revelado.</p>
+        <h1>Vou revelar o seu destino</h1>
 
-    <input type="text" placeholder="Digite sua pergunta" />
+        <p>Clique em fazer pergunta para que o seu destino seja revelado.</p>
 
-    <button>Fazer pergunta</button>
+        <input type="text" placeholder="Digite sua pergunta" />
+
+        <button>Fazer pergunta</button>
+
+    </div>
     
 </body>
 </html>
