--- a/index.html
+++ b/index.html
@@ -63,6 +63,19 @@
             cursor: pointer;
         }
 
+        #resposta {
+            margin-top: 30px;
+
+            transition: opacity 1s;
+        }
+
+        #resposta div {
+            font-size: 16px;
+            font-weight: normal;
+            opacity: 0.9;
+            margin-bottom: 10px;
+        }
+
     </style>
 </head>
 <body>
@@ -75,11 +88,15 @@
 
         <p>Clique em fazer pergunta para que o seu destino seja revelado.</p>
 
-        <input type="text" placeholder="Digite sua pergunta" />
+        <input id="inputPergunta" type="text" placeholder="Digite sua pergunta" />
 
-        <button>Fazer pergunta</button>
+        <button onclick="fazerPergunta()">Fazer pergunta</button>
+
+        <h3 id="resposta"></h3>
 
     </div>
     
+    <script src="./main.js"></script>
+
 </body>
 </html>
