atualizei tempo de aplicação

--- a/index.html
+++ b/index.html
@@ -90,7 +90,7 @@
 
         <input id="inputPergunta" type="text" placeholder="Digite sua pergunta" />
 
-        <button onclick="fazerPergunta()">Fazer pergunta</button>
+        <button id="buttonPerguntar" onclick="fazerPergunta()">Fazer pergunta</button>
 
         <h3 id="resposta"></h3>
 
